fixing table alignments

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -238,7 +238,7 @@ td {
 	padding: (0rem + ($doc-line-height / $doc-font-size)) / 2;
 }
 tr, td, th {
-	vertical-align: middle;
+	vertical-align: left;
 }
 
 /*
